# profiler

./: .gitignore  .gitmodules  AddressMapper.cpp  BBInstrument.cpp  BB_PROFILER_README.md  BB_TRACER_README.md  CMakeLists.txt  Instrument.cpp  README.md  address_helper.cpp  analyze_binary.sh  bb_map.sh  env.sh  instrument_bb.sh  x86-bb-profiler-example.py  x86-bb-tracer-example.py
src/cpu/: bbtracer.cc  bbtracer.hh
tests/: basic.py  loop.cpp  run_test.sh  stencil-2d.c  test.cpp  test.ll  test_executable  test_executable.s  test_instrumented.ll
